update register api key
