# openapi.json
@@ -16,10 +16,16 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "username": {
+                  "email": {
                     "type": "string"
                   },
                   "password": {
+                    "type": "string"
+                  },
+                  "binanceApiKey": {
+                    "type": "string"
+                  },
+                  "binanceApiSecret": {
                     "type": "string"
                   }
                 }
@@ -57,7 +63,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "username": {
+                  "email": {
                     "type": "string"
                   },
                   "password": {
@@ -97,7 +103,7 @@
                 "schema": {
                     "type": "object",
                     "properties": {
-                      "username": {
+                      "email": {
                         "type": "string"
                       }
                     }
