# src/api/user.js
@@ -3,18 +3,8 @@ const authenticateJWT = require("../middlewares/auth");
 
 const router = express.Router();
 
-/**
- * @swagger
- * /books:
- *   get:
- *     description: Get all books
- *     responses:
- *       200:
- *         description: Success
- * 
- */
 router.get("/profile", authenticateJWT, (req, res) => {
-  res.json({ username: req.user.username });
+  res.json({ email: req.user.email });
 });
 
 module.exports = router;
